@@ -1,4 +1,5 @@
 ncmpc 0.49 - not yet released
+* fix UI freeze if lyrics plugin is stuck
 * fix build failure on macOS
 
 ncmpc 0.48 - (2023-04-06)
